# transformers

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
examples/: demo_vit.py
src/transformers/: __init__.py  vit.py
tests/: test_basic.py
