[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformers"
version = "0.0.1"
description = "A minimal Transformers project scaffold"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Zafer Sahinoglu" } ]

[tool.setuptools.packages.find]
where = ["src"]
